syntax = "proto3";

package aperture.flowcontrol.v1;

message AuthzResponse {
  enum Error {
    ERROR_NO_ERROR = 0;
    ERROR_INVALID_TRAFFIC_DIRECTION = 1;
    ERROR_CONVERT_TO_GO_MAP = 2;
    ERROR_CONVERT_TO_REGO_AST = 3;
    ERROR_CLASSIFY_FLOW_LABELS = 4;
  }

  Error error = 1;
}
